--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.4",
     "react-navigation": "^4.0.10",
+    "react-navigation-tabs": "^2.5.6",
     "reactotron-react-native": "^4.0.2",
     "styled-components": "^4.4.0"
   },
