--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.4",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
